# RobotsP2Proyecto

install/: local_setup.sh  setup.sh
install/color_sorting_perception/lib/color_sorting_perception/: color_sorter
install/color_sorting_perception/share/color_sorting_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/conveyorbelt_gazebo/share/conveyorbelt_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/conveyorbelt_msgs/share/conveyorbelt_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/linkattacher_msgs/share/linkattacher_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/palletizer_move/lib/palletizer_move/: palletizer
install/palletizer_move/share/palletizer_move/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_conveyorbelt/share/ros2_conveyorbelt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_linkattacher/share/ros2_linkattacher/: package.sh  (+5 more)
log/: latest_build  latest_list
src/color_sorting_perception/: package.xml  setup.cfg  setup.py
src/color_sorting_perception/color_sorting_perception/: color_sorter_node.py
src/palletizer_move/: package.xml  setup.cfg  setup.py
src/palletizer_move/palletizer_move/: palletizer_node.py
src/ur5e_conveyor_bringup/: package.xml  setup.py
src/ur5e_conveyor_bringup/launch/: bringup_all.launch.py
src/ur5e_conveyor_bringup/urdf/: blue_box.sdf  blue_box.urdf  red_box.sdf  red_box.urdf
src/ur5e_conveyor_bringup/worlds/: conveyor_with_attacher.world
(+713 files in other folders)
