<?xml version="1.0"?>
<package format="3">
  <name>ur5e_conveyor_bringup</name>
  <version>0.1.0</version>
  <description>Bringup for UR5e + conveyor + link attacher + camera</description>
  <maintainer email="you@example.com">armando</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
